Update DatePickerDialog, so it is displayed in the AppBar in the PhotoFragment

--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -60,4 +60,5 @@
     <string name="photo_next_content_description">Vidi sljedeću sliku</string>
     <string name="photo_previous_content_description">Vidi prethodnu sliku</string>
     <string name="photo_calendar_content_description">Izaberi datum slike</string>
+    <string name="menu_calendar">Kalendar</string>
 </resources>
