--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,9 @@
     <string name="menu_asteroids">Asteroids</string>
     <string name="menu_observatories">Observatories</string>
 
+
     <string name="menu_refresh">Refresh</string>
+    <string name="menu_calendar">Calendar</string>
     <string name="menu_settings">Settings</string>
     <string name="settings_general">General</string>
 
@@ -63,6 +65,7 @@
     <string name="no_photo_found">No photo found</string>
     <string name="play_video_button">Play video</string>
     <string name="photo_video_source">Source: NASA</string>
+    <string name="photo_fragment_name" translatable="false">PhotoFragment</string>
 
     <!-- AsteroidFragment strings -->
     <string name="asteroid_hazardous_image">Asteroid hazardous indication</string>
