--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,12 @@
 
     <string name="menu_refresh">Refresh</string>
     <string name="menu_calendar">Calendar</string>
+    <string name="menu_theme">Theme</string>
+    <string name="theme_light">Light</string>
+    <string name="theme_dark">Dark</string>
+    <string name="theme_battery_saver">Set by Battery Saver</string>
+    <string name="theme_system_default">System Default</string>
+    <string name="ok" translatable="false">OK</string>
 
     <!-- AstroAppWidget strings -->
     <string name="widget_photo_of_the_day">Photo of the day</string>
