--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -60,4 +60,5 @@
     <string name="theme_dark">Tamna</string>
     <string name="theme_light">Svijetla</string>
     <string name="theme_system_default">Određena sustavom</string>
+    <string name="menu_theme_content_description">Navigirajte do teme</string>
 </resources>
