--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <!-- Content descriptions -->
     <string name="photo_of_content_description">Photo</string>
-    <string name="photo_of_the_day_content_description">Photo of the day</string>
+    <string name="photo_content_description">Photo of the day</string>
     <string name="read_more_about_content_description">Read more about</string>
     <string name="widget_image_content_description">Photo of the day image</string>
     <string name="asteroid_image_content_description">Asteroid image</string>
@@ -94,4 +94,10 @@
     <string name="open_location_settings">Open location settings</string>
 
     <string name="dismiss_dialog">Close</string>
+
+    <!-- EarthPhotoFragment strings -->
+    <string name="menu_earth_photo_content_description">Go to Earth photo</string>
+    <string name="menu_earth_photo">Earth Photo</string>
+    <string name="earth_photo_content_description">Photo of the Earth</string>
+    <string name="earth_photo_caption">This image was taken by NASA\'s EPIC camera onboard the NOAA DSCOVR spacecraft</string>
 </resources>
