--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,6 @@
     <string name="menu_earth_photo">Earth photos</string>
     <string name="earth_photo_content_description">Photos of the Earth</string>
     <string name="earth_photo_caption">This images were taken by NASA\'s EPIC camera onboard the NOAA DSCOVR spacecraft</string>
+    <string name="menu_mars_photo_content_description">Go to Mars photos</string>
+    <string name="menu_mars_photo">Mars Photos</string>
 </resources>
