Implement the previous and next button functionality to the MarsPhotoFragment, that enables the user to switch between photos of the same day

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="menu_mars_photo">Mars Photos</string>
     <string name="launch_date">"Launch date: "</string>
     <string name="landing_date">"Landing date: "</string>
+    <string name="camera">"Camera: "</string>
 </resources>
