--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,8 +100,9 @@
     <string name="earth_photo_content_description">Photos of the Earth</string>
     <string name="earth_photo_caption">This images were taken by NASA\'s EPIC camera onboard the NOAA DSCOVR spacecraft</string>
     <string name="menu_mars_photo_content_description">Go to Mars photos</string>
-    <string name="menu_mars_photo">Mars Photos</string>
+    <string name="menu_mars_photo">Mars Photo</string>
     <string name="launch_date">"Launch date: "</string>
     <string name="landing_date">"Landing date: "</string>
     <string name="camera">"Camera: "</string>
+    <string name="rover">"Rover "</string>
 </resources>
