--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,6 @@
     <string name="landing_date">"Landing date: "</string>
     <string name="camera">"Camera: "</string>
     <string name="rover">"Rover "</string>
+    <string name="sol">"Mars date (sol): "</string>
+    <string name="earth_date">"Earth date: "</string>
 </resources>
