Add an About item in the NavigationDrawer that leads to the author's website; create WebIntentUtils class with openWebsiteFromStringUrl method and implement it in the project

--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -73,4 +73,5 @@
     <string name="rover">"Rover "</string>
     <string name="sol">"Datum na Marsu (sol): "</string>
     <string name="earth_date">"Datum na Zemlji: "</string>
+    <string name="menu_about">O autoru</string>
 </resources>
