--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
     <string name="location_permission_granted">Location permission granted</string>
     <string name="location_permission_declined">Location permission not granted</string>
     <string name="grant_location_permission">Grant location permission</string>
-    <string name="video_not_playable">No apps available to display the video</string>
+    <string name="video_not_playable">Failed to display the video</string>
 
     <!-- ObservatoryFragment strings -->
     <string name="observatory_fragment_name" translatable="false">ObservatoryFragment</string>
